compiler/tests/compiler/must_fail/t_18.rs.exp.err
tests/compiler/must_fail/t_18.rs:11:9: 11:18 error: wrong number of l-values: got 1, expected 0
        x = bar();
        ^^^^^^^^^^
