compiler/tests/compiler/must_fail/t_18.mil
/* function call with wrong return arity */

fn bar() {
}

fn foo() {
  x : stack u64;
  x = bar();
}

/*
START:CMD
ARG="typecheck"
END:CMD
*/
